--- a/client-document-management/src/main/frontend/public/index.html
+++ b/client-document-management/src/main/frontend/public/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
-
+    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <title>React App</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="app"></div>
-<script type="text/javascript" src="./bundle.js"></script><script type="text/javascript" src="./bundle.js"></script><script type="text/javascript" src="./bundle.js"></script><script type="text/javascript" src="./bundle.js"></script><script type="text/javascript" src="./bundle.js"></script><script type="text/javascript" src="./bundle.js"></script></body>
+<script type="text/javascript" src="./bundle.js"></script>
+</body>
 </html>
