--- a/client-document-management/src/main/frontend/public/index.html
+++ b/client-document-management/src/main/frontend/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <title>React App</title>
+    <meta charset="utf-8"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="viewport"
+          content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+    <title>Document management</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
